add different kubeconfig with limited permissions (might not actually be needed for tests, though?)

--- a/.github/workflows/kubernetes.yaml
+++ b/.github/workflows/kubernetes.yaml
@@ -72,6 +72,34 @@ jobs:
         run: sleep $((60 * 3))
         shell: bash
 
+      - name: Get scoped service account
+        if: matrix.test_configuration == 'single_namespace_rbac'
+        run: |
+          CERTIFICATE="$(kubectl get secret "$(kubectl get sa namespace-scoped-user -o jsonpath='{.secrets[0].name}')" -o "jsonpath={.data['ca\.crt']}" | base64 -D | tr -d '\n')"
+          TOKEN="$(kubectl get secret "$(kubectl get sa namespace-scoped-user -o jsonpath='{.secrets[0].name}')" -o "jsonpath={.data.token}" | base64 -D)"
+          echo <<EOF > scoped-kubeconfig.yaml
+            apiVersion: v1
+            clusters:
+              - cluster:
+                  certificate-authority-data: <place certificate string here>
+                  server: <Kubernetes cluster API endpoint>
+                name: example
+            contexts:
+              - context:
+                  cluster: example
+                  namespace: example
+                  user: example-user
+                name: example
+            current-context: example
+            kind: Config
+            preferences: {}
+            users:
+              - name: example-user
+                user:
+                  client-key-data: $CERTIFICATE
+                  token: $TOKEN
+          EOF
+
       - name: Install Cronitor Kubernetes agent
         run: |
           helm upgrade --install cronitor-kubernetes ./charts/cronitor-kubernetes/ \
@@ -81,6 +109,7 @@ jobs:
             --set config.defaultEnvironment=CI \
             --set config.tags='ci:${{ steps.generate_random_id.outputs.random_id }}' \
             -f ./e2e-test/values/${{ matrix.test_configuration }}.yaml \
+            ${{ matrix.test_configuration == 'single_namespace_rbac' && '--kubeconfig scoped-kubeconfig.yaml' || '' }} \
             --wait
 
       - name: Print logs on failure
