Revert "push container to local registry instead"
This reverts commit a73b084962a9ab4fd4134708ad66df5a7d623e51.

--- a/.github/workflows/kubernetes.yaml
+++ b/.github/workflows/kubernetes.yaml
@@ -6,11 +6,6 @@ jobs:
 
   integration-tests:
     runs-on: ubuntu-latest
-    services:
-      registry:
-        image: registry:2
-        ports:
-          - 5000:5000
     strategy:
       fail-fast: false
       matrix:
@@ -84,7 +79,7 @@ jobs:
         with:
           context: .
           push: false
-          tags: "localhost:5000/local-docker-build:${{ steps.generate_random_id.outputs.random_id }}"
+          tags: "local-docker-build:${{ steps.generate_random_id.outputs.random_id }}"
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
@@ -107,7 +102,8 @@ jobs:
             --set config.defaultEnvironment=CI \
             --set config.tags='ci:${{ steps.generate_random_id.outputs.random_id }}' \
             -f ./e2e-test/values/${{ matrix.test_configuration }}.yaml \
-            --set image=localhost:5000/local-docker-build:${{ steps.generate_random_id.outputs.random_id }}" \
+            --set image="local-docker-build:${{ steps.generate_random_id.outputs.random_id }}" \
+            --set imagePullPolicy=Never \
             --wait
 
       - name: Sleep for 3 more minutes to let the agent run
