--- a/e2e-test/resources/main/cronjob.yaml
+++ b/e2e-test/resources/main/cronjob.yaml
@@ -1,7 +1,7 @@
 apiVersion: batch/v1beta1
 kind: CronJob
 metadata:
-  name: eventrouter-test-cronjob-2
+  name: test-cronjob
   annotations: {}
 spec:
   schedule: "*/1 * * * *"
