--- a/e2e-test/resources/kustomization.yaml
+++ b/e2e-test/resources/kustomization.yaml
@@ -1,13 +1,25 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - cronjob-extra-namespace.yaml
-  - cronjob.yaml
-  - cronjob-env-annotation.yaml
-  - cronjob-env-home.yaml
-  - cronjob-exclude.yaml
-  - cronjob-fail.yaml
+  - extra-namespace/cronjob-extra-namespace.yaml
+  - main/cronjob.yaml
+  - main/cronjob-env-annotation.yaml
+  - main/cronjob-env-home.yaml
+  - main/cronjob-exclude.yaml
+  - main/cronjob-fail.yaml
 
-patchesStrategicMerge:
-  - |-
-    apiVersion: batch/v1beta1
+patches:
+  - target:
+      kind: CronJob
+    patch: |-
+      - op: replace
+        path: /apiVersion
+        value: batch/v1beta1
+
+  - target:
+      kind: CronJob
+      name: test-cronjob-namespace
+    patch: |-
+      - op: replace
+        path: /metadata/namespace
+        value: "${EXTRA_NAMESPACE}"
