--- a/e2e-test/resources/kustomize/kustomization-sub.yaml
+++ b/e2e-test/resources/kustomize/kustomization-sub.yaml
@@ -1,15 +1,15 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - extra-namespace/cronjob-extra-namespace.yaml
-  - main/cronjob.yaml
-  - main/cronjob-env-annotation.yaml
-  - main/cronjob-cronitor-id.yaml
-  - main/cronjob-cronitor-name.yaml
-  - main/cronjob-env-home.yaml
-  - main/cronjob-exclude.yaml
-  - main/cronjob-fail.yaml
-  - main/scoped-serviceaccount.yaml
+  - ../extra-namespace/cronjob-extra-namespace.yaml
+  - ../main/cronjob.yaml
+  - ../main/cronjob-env-annotation.yaml
+  - ../main/cronjob-cronitor-id.yaml
+  - ../main/cronjob-cronitor-name.yaml
+  - ../main/cronjob-env-home.yaml
+  - ../main/cronjob-exclude.yaml
+  - ../main/cronjob-fail.yaml
+  - ../main/scoped-serviceaccount.yaml
 
 patches:
   - target:
