--- a/charts/cronitor-kubernetes/Chart.yaml
+++ b/charts/cronitor-kubernetes/Chart.yaml
@@ -2,5 +2,5 @@ apiVersion: v1
 name: cronitor-kubernetes
 description: |
   Helm chart to deploy the Cronitor Kubernetes agent to automatically monitor your CronJobs
-version: "0.3.10-alpha"
-appVersion: "0.3.10-alpha"
+version: "0.3.10-alpha.2"
+appVersion: "0.3.10-alpha.2"
