Update monitors on schedule changes (#27)
* update monitor on schedule changes

* Add test that schedule updates work properly

* typo in test

* fix

* try waiting for update

* always update cronjobs regardless, see what happens

* add dev environment reamde

* try again with logging

* need to clear the cronitor wrapper cache

* Put back conditional updates

* update chart version

Co-authored-by: Michael Owings <mowings@turbosquid.com>

--- a/e2e-test/kustomize/base/kustomization-sub.yaml
+++ b/e2e-test/kustomize/base/kustomization-sub.yaml
@@ -24,6 +24,14 @@ patches:
 
   - target:
       kind: CronJob
+      name: test-schedule-change
+    patch: |-
+      - op: replace
+        path: /metadata/annotations/k8s.cronitor.io~1cronitor-id
+        value: "test-schedule-change-${RANDOM_ID}"
+
+  - target:
+      kind: CronJob
       name: test-cronjob-namespace
     patch: |-
       - op: replace
