set cronitor-id: '' in group/notify configs

--- a/e2e-test/resources/main/cronjob-group-annotation.yaml
+++ b/e2e-test/resources/main/cronjob-group-annotation.yaml
@@ -3,6 +3,7 @@ kind: CronJob
 metadata:
   name: test-group-annotation
   annotations:
+    k8s.cronitor.io/cronitor-id: ''
     k8s.cronitor.io/cronitor-group: 'test-group'
 spec:
   schedule: "*/1 * * * *"
