add support for grace_seconds annotation

--- a/e2e-test/resources/kustomization.yaml
+++ b/e2e-test/resources/kustomization.yaml
@@ -12,3 +12,4 @@ resources:
   - main/cronjob-schedule-change.yaml
   - main/cronjob-notify-annotation.yaml
   - main/cronjob-group-annotation.yaml
+  - main/cronjob-grace-annotation.yaml
